# NetworkCursor

./: CMakeLists.txt  CMakePresets.json  README.md
client/: client.cpp  client.h  input_provider.cpp  input_provider.h  main.cpp
common/: defines.h  keyMappings.cpp  keyMappings.h  packet.h
server/: input_observer.cpp  input_observer.h  main.cpp  server.cpp  server.h
